--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,13 +16,13 @@ before_script:
 #  - apt-get update && apt-get -y install pandoc r-base
 #  - apt-get update && apt-get -y install pandoc
   - R -e "install.packages('blogdown', repos='http://cran.rstudio.com')"
-  - R -e "install.packages('RefManageR', repos='http://cran.rstudio.com')"
-  - R -e "install.packages('here', repos='http://cran.rstudio.com')"
+#  - R -e "install.packages('RefManageR', repos='http://cran.rstudio.com')"
+#  - R -e "install.packages('here', repos='http://cran.rstudio.com')"
   - R -e "blogdown::install_hugo()"
 
 pages:
   script:
-  - R -e "source('zotero_to_academic.R')"
+#  - R -e "source('zotero_to_academic.R')"
   - R -e "blogdown::build_site()"
   - mv public tempdir
   - mkdir public
