Added URL to readm

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -9,7 +9,7 @@ title = "NECTAR"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "/personal-website/public"
+baseurl = "/nectar/public"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`.
