--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,6 +4,11 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "Data"
-  url = "/data"
+  name = "Overview"
+  url = "/overview"
   weight = 10
+
+[[main]]
+  name = "Background"
+  url = "#background"
+  weight = 20
