--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ title = "OpenDrawer"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "/opendrawer/public"
+baseurl = "/opendrawer/public/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`.
